them vai comp nua

--- a/src/app/layouts/topnav/topnav.html
+++ b/src/app/layouts/topnav/topnav.html
@@ -1,1 +1,12 @@
-<p>topnav works!</p>
+<div class="topnav">
+  <nav class="nav-container">
+    <div class="flex gap-2">
+      <div class="logo">Logo nè</div>
+      <div>list page</div>
+    </div>
+    <div class="flex gap-2">
+      <div>giỏ hàng</div>
+      <div>user</div>
+    </div>
+  </nav>
+</div>
