--- a/src/app/pages/deal/deal.html
+++ b/src/app/pages/deal/deal.html
@@ -1,1 +1,17 @@
-<p>deal works!</p>
+<section>
+  <div>Search nè</div>
+  <div>
+    @for(goods of listGoods; track $index) {
+    <div>
+      <div>hình nè</div>
+      <h3>Tên deal</h3>
+      <p>chi tiết deal</p>
+      <p>giá</p>
+      <div>
+        <div>nút mua</div>
+        <div>nút add giỏ</div>
+      </div>
+    </div>
+    }
+  </div>
+</section>
