--- a/src/app/pages/gomin/gomin.html
+++ b/src/app/pages/gomin/gomin.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div>search nè</div>
+  <div><app-search></app-search></div>
   <div class="gomin-main">
     @for (item of listGoods; track $index) {
     <div>
