--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,9 +1,15 @@
 <section>
   <header class="home-header">
-    <div class="logo">cái logo nè</div>
+    <div class="logo">
+      <img src="assets/images/logo/logo.PNG" alt="" />
+    </div>
     <div class="content">
       <h1>The Seabed</h1>
-      <p>meo meo meo - anh Hiếc said</p>
+      <div class="mt-6 scam-content">
+        <p>Đu trai theo cách của bạn</p>
+        <p>Gom in cứ để chúng tôi</p>
+        <i class="mt-6">Phi Lợi Nhuận - Art Xinh - Uy Tín</i>
+      </div>
     </div>
   </header>
   <main class="home-main">
