--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -1,12 +1,31 @@
 .home-header {
   background: var(--mat-sys-primary-container);
+  color: var(--mat-sys-on-primary-container);
   padding: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
   .logo {
-    margin-right: 2rem;
+    margin-right: 5rem;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 150px;
+  }
+  .scam-content {
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  @media (max-width: 600px) {
+    flex-direction: column;
+    text-align: center;
+    .logo {
+      margin-right: 0;
+      margin-bottom: 1rem;
+      width: 80px;
+    }
   }
 }
 
